# smart_tile_robot

./: .gitignore  DEPLOYMENT.md  README.md  TROUBLESHOOTING.md  check_environment.sh  fix_numpy_opencv.sh  requirements.txt  setup_new_machine.sh  start_nano33_recording.sh  start_system.sh  捲揚機建置需求清單.md
110/: start.txt  手動控制操作指南.md
110/Arduino_IDE/hit_button_all_test2/: hit_button_all_test2.ino
110/Arduino_IDE/top_base_upd_test2/: top_base_upd_test2.ino
110/Micro-XRCE-DDS-Agent-2.4.3/: 新文字文件.txt
110/orbslam3/: README.md  Viewer.cc
110/orbslam3/monocular/: monocular-slam-node.cpp  monocular-slam-node.hpp
110/orbslam3/rgbd/: rgbd-slam-node.cpp  rgbd-slam-node.hpp
110/orbslam3/stereo/: stereo-slam-node.cpp  stereo-slam-node.hpp
110/orbslam3/stereo-inertial/: stereo-inertial-node.cpp
110/ros2_slam/: README.md
110/ros2_ws/allnode/: CMakeLists.txt  README.md  package.xml
110/ros2_ws/allnode/launch/: allnode.py
110/ros2_ws/manual/: CMakeLists.txt  README.md  package.xml
110/ros2_ws/manual/src/: manual.py
110/ros2_ws/rectangles_detect/: CMakeLists.txt  README.md  package.xml
110/ros2_ws/rectangles_detect/src/: rectangles_detect2.py  rectangles_detect2真磁磚.py
110/ros2_ws/sound_record/: CMakeLists.txt  README.MD  package.xml
110/ros2_ws/sound_record/src/: sound_record.py
110/ros2_ws/top_base_notify/: CMakeLists.txt  README.md  package.xml
110/ros2_ws/top_base_notify/src/: top_base_noti.py
Up_control2/: Up_control2.ino
hit/: README.MD  bottom_hit.ino  keyboard_sender_loop.py  test.ino
hit/bothit_keyboard/: bothit_keyboard.ino
log/: latest_build  latest_list
nano33/: nano33_mic_serial.ino  serial_wav_recorder.py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/realsence/: homography.npy  realsence_auto_hit.py
ros2_ws/sound/: README.MD  sound_inference_node.py  sound_inference_text.py  sound_record_1.py
ros2_ws/sound/inference/inferencing_v3/: Makefile  README.md  build.sh
ros2_ws/sound/inference/inferencing_v3/sdk/model-parameters/: model_metadata.h  model_variables.h
ros2_ws/sound/inference/inferencing_v3/sdk/tflite-model/: tflite_learn_833329_4.h  tflite_learn_833329_4.tflite
ros2_ws/sound/inference/inferencing_v3/source/: main_batch.cpp  main_latest.cpp
ros2_ws/sound/recordings/: inference_results_batch.csv
ros2_ws/sound/recordings/20251120_122837/: inference_results.csv
ros2_ws/sound/recordings/20251120_131020/: inference_results.csv
ros2_ws/sound/recordings/20251122_112735/: inference_results.csv
ros2_ws/sound/recordings/20251123_122040/: inference_results.csv
ros2_ws/sound/recordings/20251215_165812/: inference_results.csv
ros2_ws/sound/recordings/20251215_181358/: inference_results.csv
ros2_ws/sound/recordings/20251215_182708/: inference_results.csv
ros2_ws/sound/recordings/test/: inference_results_batch.csv
ros2_ws/sound/tflite-model/: model.tflite
top/: check_network.sh  debug_arduino_connection.sh  diagnose_connection.sh  keyboard_bridge.py  start_top.sh  test_connection.sh  上機構測試指南.md  故障排除指南.md
top/Up_control2/: Up_control2.ino
