<?xml version="1.0"?>
<package format="3">
  <name>allnode</name>
  <version>0.0.1</version>
  <description>The allnode package for executing Python nodes.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
