<?xml version="1.0"?>
<package format="3">
  <name>sound_record</name>
  <version>0.0.0</version>
  <description>ROS2 package for recording audio</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyaudio</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

