<?xml version="1.0"?>
<package format="3">
  <name>top_base_notify</name>
  <version>0.0.0</version>
  <description>top_base_notify package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <depend>actions_msgs</depend>
  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
